Added login and main

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>My BCIT Project</title>
-    <meta name="comp1800 template" content="My 1800 App">
+    <meta name="comp1800 template" content="My 1800 App" />
 
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap Library CSS CDN go here -->
     <!-- Boostrap Library JS CDN  go here -->
@@ -16,16 +15,25 @@
 
     <!-- Link to styles of your own -->
     <!-- <link rel="stylesheet" href="./styles/style.css"> -->
+  </head>
 
-</head>
-
-<body>
-
+  <body>
     <!------------------------------>
-    <!-- Your HTML Layout go here -->
+    <div class="jumbotron">
+      <h1 class="display-4">Welcome to BCIT Buddy!</h1>
+      <p class="lead">
+        This is DTC07 1800 group project revolving around community related task managment 
+      </p>
+      <hr class="my-4" />
+      <p>
+        Our goal is to create a tool that students can use to ogranize thier daily lives and develop helathy habbits
+      </p>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      </p>
+    </div>
     <!------------------------------>
     <!-- Stuff for body goes here -->
-
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
@@ -33,7 +41,5 @@
 
     <!-- Link to scripts of your own -->
     <!-- <script src="./scripts/script.js"></script> -->
-
-</body>
-
+  </body>
 </html>
