--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap Library CSS CDN go here -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <!-- Boostrap Library JS CDN  go here -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Other libraries go here -->
 
@@ -22,11 +33,13 @@
     <div class="jumbotron">
       <h1 class="display-4">Welcome to BCIT Buddy!</h1>
       <p class="lead">
-        This is DTC07 1800 group project revolving around community related task managment 
+        This is DTC07 1800 group project revolving around community related task
+        managment
       </p>
       <hr class="my-4" />
       <p>
-        Our goal is to create a tool that students can use to ogranize thier daily lives and develop helathy habbits
+        Our goal is to create a tool that students can use to ogranize thier
+        daily lives and develop helathy habbits
       </p>
       <p class="lead">
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
