--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 </head>
 
 <body>
+  <!-- Nav Bar -->
+   <header id="nav-bar">
+    
+   </header>
   <!------------------------------>
   <div class="jumbotron">
     <h1 class="display-4">Welcome to BCIT Buddy!</h1>
