--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
 
 <body>
   <!-- Nav Bar -->
-   <header id="nav-bar">
-    
+   <header id="navigation" style="display: flex; flex-wrap: nowrap; justify-content: space-between; align-items: center; width: 100vw; padding: 10px;">
+    <object data="images/icons/home-icon.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object>
+    <object data="images/icons/tasks.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object>
+    <object data="images/icons/groups.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object>
+    <object data="images/icons/backpack.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object>
+    <object data="images/icons/settings.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object>
    </header>
   <!------------------------------>
   <div class="jumbotron">
@@ -45,17 +49,6 @@
       <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </p>
   </div>
-
-
-  <footer class="navbar bg-info fixed-bottom">
-    <div class="container">
-      <a href="" class="material-icons text-white">home</a>
-      <a href="" class="material-icons text-white">checklist</a>
-      <a href="" class="material-icons text-white">groups</a>
-      <a href="" class="material-icons text-white">backpack</a>
-      <a href="" class="material-icons text-white">settings</a>
-    </div>
-  </footer>
 
   <!------------------------------>
   <!-- Stuff for body goes here -->
