--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <title>My BCIT Project</title>
   <meta name="comp1800 template" content="My 1800 App" />
-
   <!-- Required meta tags -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -21,18 +20,12 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- Link to styles of your own -->
-  <!-- <link rel="stylesheet" href="./styles/style.css"> -->
+  <link rel="stylesheet" href="./styles/style.css">
+
 </head>
 
 <body>
-  <!-- Nav Bar -->
-   <header id="navigation" style="display: flex; flex-wrap: nowrap; justify-content: space-between; align-items: center; width: 100vw; padding: 10px;">
-    <object data="images/icons/home-icon.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object>
-    <object data="images/icons/tasks.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object>
-    <object data="images/icons/groups.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object>
-    <object data="images/icons/backpack.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object>
-    <object data="images/icons/settings.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object>
-   </header>
+
   <!------------------------------>
   <div class="jumbotron">
     <h1 class="display-4">Welcome to BCIT Buddy!</h1>
@@ -49,6 +42,15 @@
       <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </p>
   </div>
+
+    <!-- Nav Bar -->
+    <header id="navigation" style="display: flex; flex-wrap: nowrap; justify-content: space-between; align-items: center; width: 100vw; padding: 4px 8px 8px 0; background-color: #bbb; position: fixed; bottom: 0; left: 0; z-index: 999;">
+      <a href="#" class="nav-link"><object data="images/icons/home-icon.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object></a>
+      <a href="#" class="nav-link"><object data="images/icons/tasks.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object></a>
+      <a href="#" class="nav-link"><object data="images/icons/groups.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object></a>
+      <a href="#" class="nav-link"><object data="images/icons/backpack.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object></a>
+      <a href="#" class="nav-link"><object data="images/icons/settings.svg" class="nav-icon" type="image/svg+xml" style="width: 48px; height: auto;"></object></a>
+     </header>
 
   <!------------------------------>
   <!-- Stuff for body goes here -->
