--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
   <!-- Other libraries go here -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.typekit.net/rkb7vro.css">
 
   <!-- Link to styles of your own -->
-  <!--<link rel="stylesheet" href="./styles/style.css">-->
+  <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 
