--- a/main.html
+++ b/main.html
@@ -48,6 +48,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/rkb7vro.css">
   </head>
 
   <body>
