--- a/demo.html
+++ b/demo.html
@@ -26,18 +26,23 @@
 </head>
 
 <body>
-<!-- Navbar -->
-<header id="navbar">
-    <nav id="nav-links">
-        <a href="index.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
-        <a href="index.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg"></a>
-        <a href="index.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg"></a>
-        <a href="index.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
-        <a href="index.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
-    </nav>
-</header>
+    <!-- Navbar -->
+    <header id="navbar">
+        <nav id="nav-links">
+            <a href="index.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
+            <a href="index.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg"></a>
+            <a href="index.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg"></a>
+            <a href="index.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
+            <a href="index.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
+        </nav>
+    </header>
 
-<!-- Main Content -->
+    <!-- Main Content -->
+    <main id="main-page">
+        <div id="main-content">
+            <img id="bear-buddy" src="./assets/animals/bear-stand.svg">
+        </div>
+    </main>
 
 
 
