Adding popup nonsense

--- a/demo-home.html
+++ b/demo-home.html
@@ -41,6 +41,12 @@
     <main id="main-page">
         <div id="main-content">
             <img id="bear-buddy" src="./assets/animals/bear-stand.svg">
+            <!-- Overlay and Popup -->
+            <div class="popup lrg-board-popup" id="popup">
+              <h5>Important Message</h5>
+              <p>This is your custom popup message!</p>
+              <button class="btn btn-primary" id="closePopup">Close</button>
+            </div> 
         </div>
     </main>
 
@@ -49,7 +55,7 @@
   <!---------------------------------------------->
 
   <!-- Link to scripts of your own -->
-  <!-- <script src="./scripts/script.js"></script> -->
+  <script src="./scripts/script.js"></script>
 </body>
 
 </html>
