--- a/main.html
+++ b/main.html
@@ -48,7 +48,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/style.css" />
-<<<<<<< HEAD
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* You can set a custom background image in your CSS */
@@ -59,15 +58,17 @@
       }
 
     </style>
-=======
-    <link rel="stylesheet" href="https://use.typekit.net/rkb7vro.css">
->>>>>>> 3824649e6dae3b40f8f0375267a044972f7a5ece
   </head>
 
   <body>
     <nav class="flex justify-center p-1">  <a href="#">
-        <img src="assets/elements/header-board.svg" alt="Home" style="width: 100px; height: 100px;" />
-    </a></nav>
+        <div style="position: relative; width: 100px; height: 100px;">
+    <img src="assets/elements/header-board.svg" alt="Header Board" style="width: 100%; height: 100%;" />
+    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: black; font-size: 10px; text-align: center;">
+        BCIT Buddy
+    </div>
+</div>
+</nav>
 
     <!-- the body of your page goes here -->
     <div
