more popup stuff

--- a/demo-home.html
+++ b/demo-home.html
@@ -45,7 +45,7 @@
             <div class="popup lrg-board-popup" id="popup">
               <h5>Important Message</h5>
               <p>This is your custom popup message!</p>
-              <button class="btn btn-primary" id="closePopup">Close</button>
+              <button class="med-btn" id="closePopup">Close</button>
             </div> 
         </div>
     </main>
