demo-index.html & styles.css

--- a/demo-home.html
+++ b/demo-home.html
@@ -41,6 +41,9 @@
     <main id="main-page">
         <div id="main-content">
             <img id="bear-buddy" src="./assets/animals/bear-stand.svg">
+            <a href="login.html">
+              <button id="home-login" class="md-btn"> User Login</button>
+            </a>
         </div>
     </main>
 
