--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 </head>
 
   <body>
+    <header id="navbar">
+      <nav id="nav-links">
+          <a href="index.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
+          <a href="index.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg"></a>
+          <a href="index.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg"></a>
+          <a href="index.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
+          <a href="index.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
+      </nav>
+  </header>
+
     <!------------------------------>
     <div class="jumbotron">
       <h1 class="display-4">Welcome to BCIT Buddy!</h1>
