more demo-home.html

--- a/demo-home.html
+++ b/demo-home.html
@@ -29,21 +29,27 @@
     <!-- Navbar -->
     <header id="navbar">
         <nav id="nav-links">
-            <a href="index.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
-            <a href="index.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg"></a>
-            <a href="index.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg"></a>
-            <a href="index.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
-            <a href="index.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
+          <a href="index.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
+          <a href="index.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg"></a>
+          <a href="index.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg"></a>
+          <a href="index.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
+          <a href="index.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
         </nav>
     </header>
 
     <!-- Main Content -->
     <main id="main-page">
         <div id="main-content">
-            <img id="bear-buddy" src="./assets/animals/bear-stand.svg">
-            <a href="login.html">
-              <button id="home-login" class="md-btn"> User Login</button>
-            </a>
+          <a href="#" id="about-us">
+            <button id="info"></button>
+          </a>
+          <div id="welcome">
+            <h1>BCITBuddy</h1>
+          </div>
+          <img id="bear-buddy" src="./assets/animals/bear-stand.svg">
+          <a href="login.html">
+            <button id="home-login" class="md-btn"> User Login</button>
+          </a>
         </div>
     </main>
 
