Added base template & about-us.html

--- a/base-page-template.html
+++ b/base-page-template.html
@@ -38,19 +38,14 @@
     </header>
 
     <!-- Main Content -->
-    <main id="main-page">
-        <div id="main-content">
-          <a href="about-us.html" id="about-us">
-            <button id="info"></button>
-          </a>
-          <div id="welcome">
-            <h1>BCITBuddy</h1>
-          </div>
-          <img id="bear-buddy" src="./assets/animals/bear-stand.svg">
-          <a href="login.html">
-            <button id="home-login" class="md-btn"> User Login</button>
-          </a>
-        </div>
+    <main id="">
+      <!-- Info Button -->
+      <a href="about-us.html" id="about-us">
+        <button id="info"></button>
+      </a>
+      <!---------------------------->
+      <!-- ADD PAGE CONTENT BELOW -->
+      <!---------------------------->
     </main>
 
   <!---------------------------------------------->
