Adding to about-us.html

--- a/about-us.html
+++ b/about-us.html
@@ -38,7 +38,25 @@
     </header>
 
     <!-- Main Content -->
-    <main id="">
+    <main id="about-us">
+        <div id="about-us-content">
+            <div id="about-us-header" class="header-board">
+                <h1>About Us</h1>
+                <h2>Meet your developers</h2>
+            </div>
+
+        <section id="dev-team" class="">
+            <div id="nick" class="team-card">
+                <div class="team-img" style="background-image: url('/assets/imgs/nick-placeholder.jpg');"></div>
+                <div class="team-info">
+                    <h3>Mr. Nick Sutton</h3>
+                    <h4>Team Boss & CEO</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat incidunt iure minima. Aliquid mollitia error corporis delectus iusto inventore doloribus omnis vitae ipsam dicta, qui esse eveniet vel recusandae nesciunt.</p>
+                </div>
+            </div>
+        </section>
+
+        </div>
     </main>
 
   <!---------------------------------------------->
