--- a/base-page-template.html
+++ b/base-page-template.html
@@ -38,14 +38,17 @@
     </header>
 
     <!-- Main Content -->
-    <main id="">
+    <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+
       <!-- Info Button -->
-      <a href="about-us.html" id="about-us">
+      <a href="about-us.html" id="about-us-btn">
         <button id="info"></button>
       </a>
+
       <!---------------------------->
       <!-- ADD PAGE CONTENT BELOW -->
       <!---------------------------->
+      
     </main>
 
   <!---------------------------------------------->
