--- a/demo-home.html
+++ b/demo-home.html
@@ -40,7 +40,7 @@
     <!-- Main Content -->
     <main id="main-page">
         <div id="main-content">
-          <a href="about-us.html" id="about-us">
+          <a href="about-us.html" id="about-us-btn">
             <button id="info"></button>
           </a>
           <div id="welcome">
