--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 </head>
 
-  <body>
+  <body id="index_body">
     <header id="navbar">
       <nav id="nav-links">
           <a href="index.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
@@ -34,7 +34,7 @@
           <a href="index.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
           <a href="index.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
       </nav>
-  </header>
+    </header>
 
     <!------------------------------>
     <div class="jumbotron">
@@ -49,7 +49,7 @@
         daily lives and develop helathy habbits
       </p>
       <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <a class="btn btn-primary btn-lg" href="./login.html" role="button">Login</a>
       </p>
     </div>
     <!------------------------------>
