group activity title and css

--- a/group_activities.html
+++ b/group_activities.html
@@ -44,6 +44,10 @@
         <a href="about-us.html" id="about-us-btn">
           <button id="info"></button>
         </a>
+        <div class="group-title">
+          <h1>Group Activities</h1>
+        </div>
+
       </div>
       <!---------------------------->
       <!-- ADD PAGE CONTENT BELOW -->
