delete excess code and whitespace

--- a/group_menu.html
+++ b/group_menu.html
@@ -50,10 +50,8 @@
 
         <div class="group-option">
           <a href=""><button id="home-login" class="md-btn"> Create a Group</button> </a>
-          <a href=""><img src="" alt=""><button id="home-login" class="md-btn"> Join a Group</button></a>
-          <a href=""><img src="" alt=""><button id="home-login" class="md-btn">Group Activities</button> </a>
-  
-  
+          <a href=""><button id="home-login" class="md-btn"> Join a Group</button></a>
+          <a href=""><button id="home-login" class="md-btn">Group Activities</button> </a>
         </div>
       </div>
 
