To-Do-List.html

--- a/to-do-list.html
+++ b/to-do-list.html
@@ -38,7 +38,7 @@
     </header>
 
     <!-- Main Content -->
-    <main id="to-do"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+    <main id="to-do" class="bg-container"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
 
       <!-- Info Button -->
       <a href="about-us.html" id="about-us-btn">
@@ -49,7 +49,7 @@
       <!-- ADD PAGE CONTENT BELOW -->
       <!---------------------------->
 
-      <div id="to-do-content">
+      <div id="to-do-content" class="main-content">
         
       </div>
       
