More to-do list

--- a/to-do-list.html
+++ b/to-do-list.html
@@ -38,7 +38,7 @@
     </header>
 
     <!-- Main Content -->
-    <main id="to-do" class="bg-container"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+    <main id="to-do" class="bg-container fixed-bg"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
 
       <!-- Info Button -->
       <a href="about-us.html" id="about-us-btn">
@@ -50,7 +50,7 @@
       <!---------------------------->
 
       <div id="to-do-content" class="main-content">
-        
+        <img src="/assets/animals/deer-stand.svg" id="to-do-buddy" class="buddy-avatar">
       </div>
       
     </main>
