Add secondary pages to /pages

--- a/pages/base-page-template.html
+++ b/pages/base-page-template.html
@@ -41,7 +41,7 @@
     <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
 
       <!-- Info Button -->
-      <a href="about-us.html" id="about-us-btn">
+      <a href="/pages/about-us.html" id="about-us-btn">
         <button id="info"></button>
       </a>
 
