--- a/pages/group-menu.html
+++ b/pages/group-menu.html
@@ -38,19 +38,29 @@
     </header>
 
     <!-- Main Content -->
-    <main id="main-page">
-        <div id="main-content">
-          <a href="about-us.html" id="about-us-btn">
-            <button id="info"></button>
-          </a>
-          <div id="welcome">
-            <h1>BCITBuddy</h1>
-          </div>
-          <img id="bear-buddy" src="./assets/animals/bear-stand.svg">
-          <a href="login.html">
-            <button id="home-login" class="md-btn"> User Login</button>
-          </a>
+    <main class="group-page"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+      <div class="group-content">
+      <!-- Info Button -->
+        <a href="/pages/about-us.html" id="about-us-btn">
+          <button id="info"></button>
+        </a>
+        <div class="group-title">
+          <h1>Group Menu</h1>
         </div>
+
+        <div class="group-option">
+          <a href=""><button id="home-login" class="md-btn"> Create a Group</button> </a>
+          <a href=""><button id="home-login" class="md-btn"> Join a Group</button></a>
+          <a href=""><button id="home-login" class="md-btn">Group Activities</button> </a>
+        </div>
+      </div>
+
+
+
+      <!---------------------------->
+      <!-- ADD PAGE CONTENT BELOW -->
+      <!---------------------------->
+      
     </main>
 
   <!---------------------------------------------->
