Update navbar across pages

--- a/main.html
+++ b/main.html
@@ -60,23 +60,16 @@
   </head>
 
   <body>
-    <!-- Navigation Bar with centered text on SVG -->
-    <nav class="flex justify-center p-1">
-      <a href="#">
-        <div style="position: relative; width: 100px; height: 100px;">
-          <img
-            src="assets/elements/header-board.svg"
-            alt="Header Board"
-            style="width: 100%; height: 100%;"
-          />
-          <div
-            style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: black; font-size: 10px; text-align: center;"
-          >
-            BCIT Buddy
-          </div>
-        </div>
-      </a>
-    </nav>
+    <!-- Navbar -->
+    <header id="navbar">
+      <nav id="nav-links">
+        <a href="/pages/user-profile.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
+        <a href="/pages/to-do-list.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg"></a>
+        <a href="/pages/groups-home.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg"></a>
+        <a href="/pages/my-bag.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
+        <a href="/pages/settings.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
+      </nav>
+  </header>
 
     <!-- Main content section with custom background -->
     <div
