--- a/pages/group-menu.html
+++ b/pages/group-menu.html
@@ -28,14 +28,14 @@
 <body>
     <!-- Navbar -->
     <header id="navbar">
-        <nav id="nav-links">
-          <a href="index.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
-          <a href="index.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg"></a>
-          <a href="index.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg"></a>
-          <a href="index.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
-          <a href="index.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
-        </nav>
-    </header>
+      <nav id="nav-links">
+        <a href="/pages/user-profile.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
+        <a href="/pages/to-do-list.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg"></a>
+        <a href="/pages/groups-home.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg"></a>
+        <a href="/pages/my-bag.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
+        <a href="/pages/settings.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
+      </nav>
+  </header>
 
     <!-- Main Content -->
     <main class="group-page"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
