Never mind, forget /pages

--- a/about-us.html
+++ b/about-us.html
@@ -50,7 +50,7 @@
             <!-- Nick's Card -->
             <div id="nick" class="team-card">
                 <div class="team-img-frame">
-                    <div class="team-img" style="background-image: url('/assets/imgs/nick-placeholder.jpg');"></div>
+                    <div class="team-img" style="background-image: url('/assets/bg/forest-pattern.png');"></div>
                 </div>
         
                 <div class="team-info">
