Fixing my mess.

--- a/about-us.html
+++ b/about-us.html
@@ -29,11 +29,11 @@
     <!-- Navbar -->
     <header id="navbar">
         <nav id="nav-links">
-          <a href="/pages/user-profile.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
-          <a href="/pages/to-do-list.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg"></a>
-          <a href="/pages/groups-home.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg"></a>
-          <a href="/pages/my-bag.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
-          <a href="/pages/settings.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
+          <a href="user-profile.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
+          <a href="to-do-list.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg"></a>
+          <a href="groups-home.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg"></a>
+          <a href="my-bag.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
+          <a href="settings.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
         </nav>
     </header>
 
@@ -50,7 +50,7 @@
             <!-- Nick's Card -->
             <div id="nick" class="team-card">
                 <div class="team-img-frame">
-                    <div class="team-img" style="background-image: url('/assets/bg/forest-pattern.png');"></div>
+                    <div class="team-img" style="background-image: url('/assets/imgs/nick-placeholder.jpg');"></div>
                 </div>
         
                 <div class="team-info">
