--- a/my-bag.html
+++ b/my-bag.html
@@ -29,11 +29,11 @@
     <!-- Navbar -->
     <header id="navbar">
       <nav id="nav-links">
-        <a href="/pages/user-profile.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
-        <a href="/pages/to-do-list.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg"></a>
-        <a href="/pages/groups-home.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg"></a>
-        <a href="/pages/my-bag.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
-        <a href="/pages/settings.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
+        <a href="user-profile.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
+        <a href="to-do-list.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg"></a>
+        <a href="groups-home.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg"></a>
+        <a href="my-bag.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
+        <a href="settings.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
       </nav>
   </header>
 
@@ -41,7 +41,7 @@
     <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
 
       <!-- Info Button -->
-      <a href="/pages/about-us.html" id="about-us-btn">
+      <a href="about-us.html" id="about-us-btn">
         <button id="info"></button>
       </a>
 
