--- a/assets.html
+++ b/assets.html
@@ -22,12 +22,17 @@
 
   <!-- Link to styles of your own -->
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/assets.css">
 
 </head>
 <body>
-
     <!-- Square Button -->
     <button class="sq-btn" style="background-image: url('/assets/elements/blank-sq-button.svg');"></button>
+
+    <!-- Button Small -->
+    <button id="home-login" class="sm-btn">Button Text</button>
+    <!-- Button Medium -->
+    <button id="home-login" class="md-btn">Button Text</button>
 
 </body>
 </html>
