--- a/login.html
+++ b/login.html
@@ -50,6 +50,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/assets.css">
     <link rel="stylesheet" href="https://use.typekit.net/rkb7vro.css">
   </head>
 
