--- a/main.html
+++ b/main.html
@@ -48,6 +48,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/assets.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Custom background styling */
