--- a/to-do-list.html
+++ b/to-do-list.html
@@ -22,6 +22,7 @@
 
   <!-- Link to styles of your own -->
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/assets.css">
 
 </head>
 
