--- a/assets.html
+++ b/assets.html
@@ -26,8 +26,8 @@
 
 </head>
 <body>
-    <!-- Square Button -->
-    <button class="sq-btn" style="background-image: url('/assets/elements/blank-sq-button.svg');"></button>
+    <!-- Square Button Blank -->
+    <button class="sq-btn" style="background-image: url('/assets/elements/blank-sq-button.svg');"><img src="/assets/imgs/ico.svg"></button>
 
     <!-- Button Small -->
     <button id="home-login" class="sm-btn">Button Text</button>
