--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/assets.css">
+    <link rel="stylesheet" href="./styles/assets.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Custom background styling */
@@ -64,13 +64,23 @@
     <!-- Navbar -->
     <header id="navbar">
       <nav id="nav-links">
-        <a href="user-profile.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
-        <a href="to-do-list.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg"></a>
-        <a href="groups-home.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg"></a>
-        <a href="my-bag.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
-        <a href="settings.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
+        <a href="user-profile.html" id="home" class="nav-button"
+          ><img src="./assets/elements/home.svg"
+        /></a>
+        <a href="to-do-list.html" id="my-list" class="nav-button"
+          ><img src="./assets/elements/to-do-list.svg"
+        /></a>
+        <a href="groups-home.html" id="groups" class="nav-button"
+          ><img src="./assets/elements/groups.svg"
+        /></a>
+        <a href="my-bag.html" id="bag" class="nav-button"
+          ><img src="./assets/elements/bag.svg"
+        /></a>
+        <a href="settings.html" id="settings" class="nav-button"
+          ><img src="./assets/elements/settings.svg"
+        /></a>
       </nav>
-  </header>
+    </header>
 
     <!-- Main content section with custom background -->
     <div
@@ -81,7 +91,13 @@
           Good morning, <span id="name-goes-here"></span>
         </h1>
         <hr />
-        <p>Quote of the day: The best view comes after the hardest climb.</p>
+
+        <div id="task-list" class="mt-5 w-full max-w-md">
+          <h2 class="text-lg font-semibold mb-4">Tasks</h2>
+          <!-- Tasks will be dynamically inserted here -->
+        </div>
+
+        
       </div>
 
       <!-- Input Section for Tasks -->
@@ -89,7 +105,9 @@
         <h2 class="text-lg font-semibold mb-4">Add a New Task</h2>
         <form>
           <div class="mb-4">
-            <label for="task" class="block text-sm font-medium text-gray-700">Task</label>
+            <label for="task" class="block text-sm font-medium text-gray-700"
+              >Task</label
+            >
             <input
               type="text"
               id="task"
@@ -99,7 +117,11 @@
             />
           </div>
           <div class="mb-4">
-            <label for="due-date" class="block text-sm font-medium text-gray-700">Due Date</label>
+            <label
+              for="due-date"
+              class="block text-sm font-medium text-gray-700"
+              >Due Date</label
+            >
             <input
               type="date"
               id="due-date"
@@ -108,7 +130,11 @@
             />
           </div>
           <div class="mb-4">
-            <label for="description" class="block text-sm font-medium text-gray-700">Description</label>
+            <label
+              for="description"
+              class="block text-sm font-medium text-gray-700"
+              >Description</label
+            >
             <textarea
               id="description"
               rows="3"
@@ -130,11 +156,21 @@
     <footer class="flex justify-between p-1 mx-4">
       <header id="navbar">
         <nav id="nav-links">
-          <a href="index.html" id="home" class="nav-button"><img src="./assets/elements/home.svg" /></a>
-          <a href="index.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg" /></a>
-          <a href="index.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg" /></a>
-          <a href="index.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg" /></a>
-          <a href="index.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg" /></a>
+          <a href="index.html" id="home" class="nav-button"
+            ><img src="./assets/elements/home.svg"
+          /></a>
+          <a href="index.html" id="my-list" class="nav-button"
+            ><img src="./assets/elements/to-do-list.svg"
+          /></a>
+          <a href="index.html" id="groups" class="nav-button"
+            ><img src="./assets/elements/groups.svg"
+          /></a>
+          <a href="index.html" id="bag" class="nav-button"
+            ><img src="./assets/elements/bag.svg"
+          /></a>
+          <a href="index.html" id="settings" class="nav-button"
+            ><img src="./assets/elements/settings.svg"
+          /></a>
         </nav>
       </header>
     </footer>
