--- a/about-us.html
+++ b/about-us.html
@@ -41,9 +41,8 @@
     <!-- Main Content -->
     <main id="about-us">
         <div id="about-us-content">
-            <div id="about-us-header" class="header-board">
+            <div id="about-us-header" class="head-board">
                 <h1>About Us</h1>
-                <h2>Meet your developers</h2>
             </div>
 
         <section id="dev-team" class="">
