--- a/assets.html
+++ b/assets.html
@@ -26,13 +26,41 @@
 
 </head>
 <body>
+  <div id="buttons">
+    <h1>Buttons</h1>
+
+    <!-- Confirm Button -->
+    <a href="">
+      <button class="confirm-btn"></button>
+    </a>
+
+    <!-- Confirm Button -->
+    <a href="">
+      <button class="cancel-btn"></button>
+    </a>
+    
     <!-- Square Button Blank -->
-    <button class="sq-btn" style="background-image: url('/assets/elements/blank-sq-button.svg');"><img src="/assets/imgs/ico.svg"></button>
+    <a href="">
+      <button class="sq-btn"><img src="/assets/imgs/ico.svg"></button>
+    </a>
 
     <!-- Button Small -->
-    <button id="home-login" class="sm-btn">Button Text</button>
+    <button id="" class="sm-btn">Button Text</button>
+
     <!-- Button Medium -->
-    <button id="home-login" class="md-btn">Button Text</button>
+    <button id="" class="md-btn">Button Text</button>
+
+    <h1>Boards / Containers</h1>
+
+    <!-- Header Board -->
+    <div class="head-board"><h1>Heading Text</h1></div>
+
+    <!-- Large Board 1x1 -->
+    <div class="lrg-board-sq">
+      <h4>Heading Text</h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto porro, id ducimus accusamus a, earum quas et eos quidem cum consequuntur sed molestiae iste enim maxime, sit itaque expedita ad?</p>
+    </div>
+
 
 </body>
 </html>
