More Chat Bar Edits

--- a/main.html
+++ b/main.html
@@ -92,7 +92,7 @@
         </h1>
         <hr />
 
-        <div id="task-list" class="mt-5 w-full max-w-md flex justify-between
+        <div id="task-list" class="mt-5 w-full max-w-md flex flex-col">
           <h2 class="text-lg font-semibold mb-4">Tasks</h2>
           <!-- Tasks will be dynamically inserted here -->
         </div>
