--- a/main.html
+++ b/main.html
@@ -134,15 +134,16 @@
       </div>
       <button
         type="submit"
+        id="submit-btn"
         class="w-full bg-blue-600 text-white rounded-lg py-2 hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50"
       >
-        Add Task
+        Submit
       </button>
     </form>
   </div>
 
   <!-- Chat Container -->
-  <div class="bg-white shadow-md rounded-lg w-full max-w-md flex flex-col h-[70vh]">
+  <div id="chat-container" class="bg-white shadow-md rounded-lg w-full max-w-md flex flex-col h-[70vh]">
     <!-- Chat Display Area -->
     <div id="chat-display" class="flex-grow p-4 overflow-y-auto">
       <!-- Messages will be appended here -->
@@ -159,7 +160,8 @@
           required
         />
         <button
-          type="submit"
+          type="send"
+          id="send-btn"
           class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 focus:ring focus:ring-blue-300"
         >
           Send
