add log out button top left corner

--- a/group-menu.html
+++ b/group-menu.html
@@ -45,6 +45,8 @@
         <a href="about-us.html" id="about-us-btn">
           <button id="info"></button>
         </a>
+        <a id="logout-btn"><button class="sm-btn" onclick="logout()">Log Out</button> </a>
+
         <div class="group-title">
           <h1>Group Menu</h1>
         </div>
