changed href for user-profile.html to home.html

--- a/main.html
+++ b/main.html
@@ -64,7 +64,7 @@
     <!-- Navbar -->
     <header id="navbar">
       <nav id="nav-links">
-        <a href="user-profile.html" id="home" class="nav-button"
+        <a href="home.html" id="home" class="nav-button"
           ><img src="./assets/elements/home.svg"
         /></a>
         <a href="to-do-list.html" id="my-list" class="nav-button"
